some small changes - added visible last login on user profile page when viewing another user's profile, on the same page added a display of all the user's groups, fixed the error I found where the 'edit group details' button always showed even if the viewing user was not a member, and slightly tidied up buttons on the group pages (most notably introducint vertical space between the 'invite someone' buttons

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -259,3 +259,8 @@ label.chosen-instr {
 #div_id_accept_or_decline {
     display: inline-block;
 }
+
+.invite-button {
+    display: inline-block;
+    margin: 5px 0;
+}
